@@ -7,6 +7,10 @@ SuperTuxKart SVN
   - Fixed several bugs related to track and character group selection.
   - Plunger would stay in face after a restart of a race
   - Prevented incorrect rescues in Fort magma.
+  - Added slowdown for karts driving backwards
+  - Fixed crash if the user_config contained an invalid last used
+    kart id (e.g. too big because it's from a previous installation
+    with more karts), kart or track group.
 * Code cleanup:
   - Removed all snprintfs and constants defining a maximum message size.
 
